--- a/scrollLI.html
+++ b/scrollLI.html
@@ -12,9 +12,12 @@
 			}
 			a{text-decoration: none;outline: none;}
 			ul{list-style: none;}
-			html{font-family: 'Microsoft Yahei';}
+			html{font-family: 'Microsoft Yahei';
+			height: 100%;
+		}
 			body{
-				background-color: #b8e0ac;
+				/*background-color: #b8e0ac;*/
+				background: -webkit-linear-gradient(left, #ace, #f96);
 			}
 			/*bodylike*/
 			.body{
