--- a/cityPicker/index.html
+++ b/cityPicker/index.html
@@ -28,7 +28,7 @@
 			<option v-for="item in Lthree" v-on:click.stop="chooseCity($index)">{{item}}</option>
 		</select>
 		<script type="text/javascript" src="vue.min.js"></script>
-		<script type="text/javascript" src="js/city.js"></script>
-		<script type="text/javascript" src="js/cityPick.js"></script>
+		<script type="text/javascript" src="city.js"></script>
+		<script type="text/javascript" src="cityPick.js"></script>
 	</body>
 </html>
