loading animation update 2

--- a/loading/loading.html
+++ b/loading/loading.html
@@ -15,5 +15,11 @@
 		<ul class="loading2">
 			<li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li>		
 		</ul>
+		<ul class="loading3">
+			<li></li><li></li><li></li><li></li><li></li>
+		</ul>
+		<div class="loading4">
+			<div></div>
+		</div>
 	</body>
 </html>
