--- a/loading/loading.html
+++ b/loading/loading.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>loading动画</title>
 		<link rel="stylesheet" type="text/css" href="loading1.css">
+		<link rel="stylesheet" type="text/css" href="loading2.css">
 		<link rel="stylesheet" type="text/css" href="animationFunction.css">
 	</head>
 	<body id="address">
@@ -21,5 +22,8 @@
 		<div class="loading4">
 			<div></div>
 		</div>
+		<ul class="loading5">
+			<li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li>
+		</ul>
 	</body>
 </html>
