one more  loading  animation

--- a/loading/loading.html
+++ b/loading/loading.html
@@ -25,5 +25,9 @@
 		<ul class="loading5">
 			<li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li>
 		</ul>
+		<div class="loading6">
+			<canvas id="loading6" height="100" width="100"></canvas>
+		</div>
+		<script type="text/javascript" src="js/canvas.js"></script>
 	</body>
 </html>
