less + new loading animation

--- a/loading/loading.html
+++ b/loading/loading.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="loading1.css">
 		<link rel="stylesheet" type="text/css" href="loading2.css">
 		<link rel="stylesheet" type="text/css" href="animationFunction.css">
+		<link rel="stylesheet" type="text/css" href="loading7.css">
 	</head>
 	<body id="address">
 		<ul class="loading1">
@@ -28,6 +29,9 @@
 		<div class="loading6">
 			<canvas id="loading6" height="100" width="100"></canvas>
 		</div>
+		<ul class="loading7">
+			<li><span></span></li><li><span></span></li><li><span></span></li><li><span></span></li>
+		</ul>
 		<script type="text/javascript" src="js/canvas.js"></script>
 	</body>
 </html>
