--- a/autoComplet/autoComplet.html
+++ b/autoComplet/autoComplet.html
@@ -11,7 +11,7 @@
 		<div class="autoComp">
 			<div class="spanList"></div><input type="text" name="" class="inputBox"><ul></ul>
 		</div>
-		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/aC.js"></script>
 	</body>
 </html>
